--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "predis/predis": "^2.0",
         "ralouphie/mimey": "^1.0"
     },
     "require-dev": {
